--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 </head>
 
 <body>
-  <div data-offset="5" class="poster">
-		<div class="shine"></div>
-		<div data-offset="1" class="layer-1"></div>
-		<div data-offset="5" class="layer-4"></div>
-		<div data-offset="15" class="layer-3"></div>
-		<div data-offset="5" class="layer-2"></div>
-	</div>
-  <script src="javascript/javascript.js"></script>
+<p>HELLLO WORLD!</p>
 </body>
 
 </html>
