ready for coding

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>INDSÆT TITEL</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <title>KONTINUUM</title>
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-<p>HELLLO WORLD!</p>
+  <p>HELLLO WORLD!</p>
 </body>
 
 </html>
