--- a/index.html
+++ b/index.html
@@ -13,52 +13,61 @@
 </head>
 
 <body>
-
-  <canvas id="canvas"></canvas>
-
-
-<!-- snippet from https://codepen.io/mutedblues/pen/MmPNPG -->
+  <!-- snippet from https://codepen.io/mutedblues/pen/MmPNPG -->
 
   <header class="header">
     <a href="#home" class="logo">
       <img src="img/logo-kontinuum.png" alt="logo">
     </a>
-    <a href="#home" class="text-logo">
-      <img src="img/text-logo-kontinuum.png" alt="logo">
-    </a>
+
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <li> <a href="#home" onclick="showPage('home')">Home</a></li>
-      <li> <a href="#about" onclick="showPage('about')">About</a></li>
-      <li> <a href="#clients" onclick="showPage('clients')">Clients</a> </li>
-      <li> <a href="#contact" onclick="showPage('contact')">Contact</a> </li>
+      <li> <a href="#home" onclick="showPage('home')">ARTISTS</a></li>
+      <li> <a href="#about" onclick="showPage('about')">TICKETS</a></li>
+      <li> <a href="#clients" onclick="showPage('clients')">THE LOCATION</a> </li>
+      <li> <a href="#contact" onclick="showPage('contact')">ABOUT</a> </li>
+      <li> <a href="#contact" onclick="showPage('contact')">ABOUT</a> </li>
     </ul>
   </header>
 
+  <div class="canvas-container">
+    <canvas id="canvas"></canvas>
+  </div>
 
   <!-- pages -->
-  <!-- home page -->
-  <section id="home" class="page">
-    <p>My Single Page Web App Template</p>
-  </section>
+  <div class="pages-wrapper">
+    <!-- home page -->
+    <section id="home" class="page">
+      <div class="container">
+  <div class="box color-white">A</div>
+  <div class="box color-red"><h3>MUSIC</h3></div>
+  <div class="box color-purple"><h3>ART</h3></div>
+  <div class="box color-white">D</div>
+</div>
+    </section>
 
-  <!-- about page -->
-  <section id="about" class="page">
+    <!-- about page -->
+    <section id="about" class="page">
 
-    <p>This is my about page</p>
-  </section>
+      <p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis
+        iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+        aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
+        ut labore et dolore magnam aliquam quaerat voluptatem. </p>
+    </section>
 
-  <!-- clients page -->
-  <section id="clients" class="page">
+    <!-- clients page -->
+    <section id="clients" class="page">
 
-    <p>Hmm, there should be some clients right here...</p>
-  </section>
+      <p>Hmm, there should be some clients right here...</p>
+    </section>
 
-  <!-- contact page -->
-  <section id="contact" class="page">
+    <!-- contact page -->
+    <section id="contact" class="page">
 
-  </section>
+    </section>
+  </div>
 
 </body>
 
