--- a/index.html
+++ b/index.html
@@ -39,18 +39,53 @@
   <div class="pages-wrapper">
     <!-- home page -->
     <section id="home" class="page">
-      <div class="container">
-  <div class="box color-white">A</div>
-  <div class="box color-red"><h3>MUSIC</h3></div>
-  <div class="box color-purple"><h3>ART</h3></div>
-  <div class="box color-white">D</div>
-</div>
+      <div class="twoxtwo-container">
+        <div class="box background-color-white artist-box">
+          <div class="black-header-box">
+            <h3>Tiddy</h3>
+          </div>
+          <section class="box-information">
+            <h5 class="artist-hashtags">MUSIC | DEEP HOUSE</h5>
+            <p class="artist-short-descripton">This is one hot guy, playing smooth housemusic</p>
+            <img class="artist-image" src="img/tiddy-image.png" alt="dj tiddy">
+            <button class="read-more-button" onclick="rotateTriangle();">
+              <p>Read More</p>
+              <div id="triangle" class="read-more-triangle"></div>
+            </button>
+          </section>
+        </div>
+        <div class="box background-color-red color-box">
+          <h3>MUSIC</h3>
+        </div>
+        <div id="modeInfoTiddy" class="more-info">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          </p>
+        </div>
+        <div class="box background-color-purple color-box">
+          <h3>ART</h3>
+        </div>
+        <div class="box color-white">D</div>
+      </div>
+      <div class="twoxtwo-container">
+        <div class="box background-color-white">
+          <div class="black-header-box"></div>
+        </div>
+        <div class="box background-color-red color-box">
+          <h3>MUSIC</h3>
+        </div>
+        <div class="box background-color-purple color-box">
+          <h3>ART</h3>
+        </div>
+        <div class="boxbackground-color-white">D</div>
+      </div>
     </section>
 
     <!-- about page -->
     <section id="about" class="page">
 
-      <p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+      <p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis
         iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
         aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
