--- a/index.html
+++ b/index.html
@@ -16,73 +16,39 @@
   <!-- snippet from https://codepen.io/mutedblues/pen/MmPNPG -->
 
   <header class="header">
-    <a href="#home" class="logo">
+    <a href="#home" onclick="showPage('home')" class="logo">
       <img src="img/logo-kontinuum.png" alt="logo">
     </a>
 
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
+    <ul id="menu" class="menu">
       <li> <a href="#home" onclick="showPage('home')">ARTISTS</a></li>
-      <li> <a href="#about" onclick="showPage('about')">TICKETS</a></li>
-      <li> <a href="#clients" onclick="showPage('clients')">THE LOCATION</a> </li>
-      <li> <a href="#contact" onclick="showPage('contact')">ABOUT</a> </li>
-      <li> <a href="#contact" onclick="showPage('contact')">ABOUT</a> </li>
+      <li> <a href="#tickets" onclick="showPage('tickets')">TICKETS</a></li>
+      <li> <a href="#location" onclick="showPage('location')">THE LOCATION</a> </li>
+      <li> <a href="#about" onclick="showPage('about')">ABOUT</a> </li>
+      <li> <a href="#contact" onclick="showPage('contact')">CONTACT</a> </li>
     </ul>
   </header>
 
   <div class="canvas-container">
     <canvas id="canvas"></canvas>
   </div>
-
   <!-- pages -->
-  <div class="pages-wrapper">
+  <div id="pages-wrapper">
     <!-- home page -->
     <section id="home" class="page">
-      <div class="twoxtwo-container">
-        <div class="box background-color-white artist-box">
-          <div class="black-header-box">
-            <h3>Tiddy</h3>
-          </div>
-          <section class="box-information">
-            <h5 class="artist-hashtags">MUSIC | DEEP HOUSE</h5>
-            <p class="artist-short-descripton">This is one hot guy, playing smooth housemusic</p>
-            <img class="artist-image" src="img/tiddy-image.png" alt="dj tiddy">
-            <button class="read-more-button" onclick="rotateTriangle();">
-              <p>Read More</p>
-              <div id="triangle" class="read-more-triangle"></div>
-            </button>
-          </section>
-        </div>
-        <div class="box background-color-red color-box">
-          <h3>MUSIC</h3>
-        </div>
-        <div id="modeInfoTiddy" class="more-info">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-          </p>
-        </div>
-        <div class="box background-color-purple color-box">
-          <h3>ART</h3>
-        </div>
-        <div class="box color-white">D</div>
+      <div id="home-header" class="background-color-black" onclick="goToArtists()">
+        <div id="home-header-arrow" class="read-more-triangle color-white"></div>
       </div>
-      <div class="twoxtwo-container">
-        <div class="box background-color-white">
-          <div class="black-header-box"></div>
-        </div>
-        <div class="box background-color-red color-box">
-          <h3>MUSIC</h3>
-        </div>
-        <div class="box background-color-purple color-box">
-          <h3>ART</h3>
-        </div>
-        <div class="boxbackground-color-white">D</div>
+      <div id="grid-container"></div>
+      <div id="home-footer" class="background-color-black">
+        <a href="#home">Back to top of page</a>
       </div>
     </section>
 
-    <!-- about page -->
-    <section id="about" class="page">
+    <!-- tickets page -->
+    <section id="tickets" class="page">
 
       <p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
@@ -92,10 +58,15 @@
         ut labore et dolore magnam aliquam quaerat voluptatem. </p>
     </section>
 
-    <!-- clients page -->
-    <section id="clients" class="page">
+    <!-- location page -->
+    <section id="location" class="page">
 
       <p>Hmm, there should be some clients right here...</p>
+    </section>
+
+    <!-- about page -->
+    <section id="about" class="page">
+
     </section>
 
     <!-- contact page -->
@@ -104,13 +75,37 @@
     </section>
   </div>
 
+  <footer class="footer-nav">
+    <section class="sponsor-header">
+      <h3>In collaboration with:</h3>
+      <div class="footer-container">
+        <img src="img/koda_kultur_logo.png" alt="koda logo">
+        <img src="img/statens.jpg" alt="statens institut for kunst logo">
+        <img src="img/Tuborgfondet.jpg" alt="tuborgfondets logo">
+        <img src="img/aarhus_kommune.jpg" alt="aarhus kommune logo">
+      </div>
+    </section>
+    <section class="sub-header background-color-black color-white">
+      <h3>Contact</h3>
+      <div class="footer-container">
+        <a href="mailto:webmaster@example.com">resepct@kontinuum.com</a>
+        |
+        <a href="tel:+4526272829">+45 26 27 28 29</a>
+        |
+        <a href="https://data.virk.dk/">CVR.: 173494712</a>
+      </div>
+    </section>
+  </footer>
+
 </body>
 
 <script src="./build/three.js"></script>
 <script src="./build/three.min.js"></script>
 <script src="javascript/three.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="./plugin/jquery.fittext.js"></script>
 <script src="javascript/javascript.js"></script>
+<script src="javascript/fetch.js"></script>
 
 <script>
 
