fixed bigger screens + background

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <ul id="menu" class="menu">
       <li> <a href="#home" onclick="showPage('home')">ARTISTS</a></li>
       <li> <a href="#tickets" onclick="showPage('tickets')">TICKETS</a></li>
-      <li> <a href="#location" onclick="showPage('location')">THE LOCATION</a> </li>
+      <li> <a href="#location" onclick="showPage('location')">LOCATION</a> </li>
       <li> <a href="#about" onclick="showPage('about')">ABOUT</a> </li>
-      <li> <a href="#contact" onclick="showPage('contact')">CONTACT</a> </li>
+      <li> <a href="#contact" class="no-border" onclick="showPage('contact')">CONTACT</a> </li>
     </ul>
   </header>
 
