slettet lokalt content og henter nu fra online WP-site

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header id="header" class="header">
     <a href="#home" onclick="showPage('home')" class="logo">
-      <img id="logo_1" src="img/logo-kontinuum.png" alt="logo">
+      <img id="logo_1" src="img/logo-kontinuum.jpg" alt="logo">
       <img id="logo_2" src="img/logo-kontinuum-with-text.png" alt="logo">
     </a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
