--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
     <section class="sponsor-footer">
       <h3>In collaboration with:</h3>
       <div class="footer-container">
-        <a href="" alt="">
+        <a href="https://www.koda.dk/medlem/sog-stotte/koda-kultur">
           <img src="img/koda_kultur_logo.png" alt="koda logo">
         </a>
-        <a href="" alt="">
+        <a href="https://www.kunst.dk/">
           <img src="img/statens.jpg" alt="statens institut for kunst logo">
         </a>
-        <a href="" alt="">
+        <a href="https://www.tuborgfondet.dk/">
           <img src="img/Tuborgfondet.jpg" alt="tuborgfondets logo">
         </a>
-        <a href="" alt="">
+        <a href="https://www.aarhus.dk/">
           <img src="img/aarhus_kommune.jpg" alt="aarhus kommune logo">
         </a>
       </div>
@@ -105,7 +105,7 @@
     <section class="sub-footer background-color-black color-white">
       <h3>Contact</h3>
       <div class="footer-container">
-        <a href="mailto:webmaster@example.com">respect@kontinuum.com</a>
+        <a href="mailto:contact@kontinuum.one">contact@kontinuum.one</a>
         |
         <a href="tel:+4526272829">+45 26 27 28 29</a>
         |
