replace section --> article

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- pages -->
   <div id="pages-wrapper">
     <!-- home page -->
-    <section id="home" class="page">
+    <article id="home" class="page">
       <div id="home-header" class="background-color-black" onclick="goToArtists()">
         <div id="home-header-arrow" class="read-more-triangle color-white"></div>
       </div>
@@ -54,10 +54,10 @@
       </div>
 
 
-    </section>
+    </article>
 
     <!-- tickets page -->
-    <section id="tickets" class="page">
+    <article id="tickets" class="page">
 
       <p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
@@ -65,27 +65,27 @@
         iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
         aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt
         ut labore et dolore magnam aliquam quaerat voluptatem. </p>
-    </section>
+    </article>
 
     <!-- location page -->
-    <section id="location" class="page">
+    <article id="location" class="page">
 
       <p>Hmm, there should be some clients right here...</p>
-    </section>
+    </article>
 
     <!-- about page -->
-    <section id="about" class="page">
+    <article id="about" class="page">
 
-    </section>
+    </article>
 
     <!-- contact page -->
-    <section id="contact" class="page">
+    <article id="contact" class="page">
 
-    </section>
+    </article>
   </div>
 
   <footer id="footer" class="footer-nav default">
-    <section class="sponsor-footer">
+    <article class="sponsor-footer">
       <h3>In collaboration with:</h3>
       <div class="footer-container">
         <a href="https://www.koda.dk/medlem/sog-stotte/koda-kultur">
@@ -101,8 +101,8 @@
           <img src="img/aarhus_kommune.jpg" alt="aarhus kommune logo">
         </a>
       </div>
-    </section>
-    <section class="sub-footer background-color-black color-white">
+    </article>
+    <article class="sub-footer background-color-black color-white">
       <h3>Contact</h3>
       <div class="footer-container">
         <a href="mailto:contact@kontinuum.one">contact@kontinuum.one</a>
@@ -111,7 +111,7 @@
         |
         <a href="https://data.virk.dk/">CVR.: 173494712</a>
       </div>
-    </section>
+    </article>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
