--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <div id="home-header" class="background-color-black" onclick="goToArtists()">
         <div id="home-header-arrow" class="read-more-triangle color-white"></div>
       </div>
+      <div class="page-heading background-color-white" onclick="goToArtists()">
+        <h3>ARTISTS</h3>
+      </div>
       <div id="grid-container"></div>
 
       <div id="home-footer" class="background-color-black pointer" onclick="toTheTop()">
@@ -58,7 +61,7 @@
 
     <!-- tickets page -->
     <article id="tickets" class="page">
-
+      <h3>TICKETS</h3>
       <p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis
@@ -69,7 +72,7 @@
 
     <!-- location page -->
     <article id="location" class="page">
-
+      <h3>LOCATION</h3>
       <p>Hmm, there should be some clients right here...</p>
     </article>
 
@@ -80,10 +83,9 @@
 
     <!-- contact page -->
     <article id="contact" class="page">
-
+      <h3>CONTACT</h3>
     </article>
   </div>
-
   <footer id="footer" class="footer-nav default">
     <article class="sponsor-footer">
       <h3>In collaboration with:</h3>
