--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- about page -->
     <article id="about" class="page">
-
+      <h3>ABOUT</h3>
     </article>
 
     <!-- contact page -->
