--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <script src="javascript/fetch.js"></script>
   <script src="./build/three.js"></script>
   <script src="./build/three.min.js"></script>
-  <script src="javascript/three.js"></script>
+  <script src="javascript/three_custom.js"></script>
   <script src="javascript/javascript.js"></script>
 </body>
 
