iterationer efter brugertest

--- a/index.html
+++ b/index.html
@@ -47,15 +47,61 @@
       <div id="home-header" class="background-color-black" onclick="goToArtists()">
         <div id="home-header-arrow" class="read-more-triangle color-white"></div>
       </div>
-      <div class="page-heading background-color-white" onclick="goToArtists()">
-        <h3>ARTISTS</h3>
+
+      <div class="welcome-post">
+        <img src="img/poster-kontinuum.jpg">
+        <!--
+        <div class="welcome-post-color-box">KONTINUUM</div>
+
+        <div class="welcome-post-info">
+          <div class="welcome-post-info-header">
+            <h3>WHAT IS THIS?</h3>
+          </div>
+          <p>Kontinnum is a one day festival mergin light, video and interactive arts with electronic music in the basement at
+            <br>the <a href="#location">former county hospital</a>
+            <br>in Aarhus C.</p>
+          <p><i>Join in for an unique and atmospheric experience.</i></p>
+          <p>Read more about the artitsts
+            <br>by scrolling down.</p>
+        </div>
+      -->
       </div>
-      <div id="grid-container"></div>
+
+      <div id="grid-container">
+      </div>
 
       <div id="home-footer" class="background-color-black pointer" onclick="toTheTop()">
         <p>Back to top of page</p>
       </div>
-
+      <footer id="footer" class="footer-nav default">
+        <article class="sponsor-footer">
+          <h3>In collaboration with:</h3>
+          <div class="footer-container">
+            <a href="https://www.koda.dk/medlem/sog-stotte/koda-kultur">
+              <img src="img/koda_kultur_logo.png" alt="koda logo">
+            </a>
+            <a href="https://www.kunst.dk/">
+              <img src="img/statens.jpg" alt="statens institut for kunst logo">
+            </a>
+            <a href="https://www.tuborgfondet.dk/">
+              <img src="img/Tuborgfondet.jpg" alt="tuborgfondets logo">
+            </a>
+            <a href="https://www.aarhus.dk/">
+              <img src="img/aarhus_kommune.jpg" alt="aarhus kommune logo">
+            </a>
+          </div>
+        </article>
+        <article class="sub-footer background-color-black color-white">
+          <h3>Contact</h3>
+          <div class="footer-container">
+            <a href="mailto:contact@kontinuum.one">contact@kontinuum.one</a>
+            |
+            <a href="tel:+4526272829">+45 26 27 28 29</a>
+            |
+            <a href="https://data.virk.dk/">CVR.: 173494712</a>
+          </div>
+        </article>
+      </footer>
 
     </article>
 
@@ -86,35 +132,6 @@
       <h3>CONTACT</h3>
     </article>
   </div>
-  <footer id="footer" class="footer-nav default">
-    <article class="sponsor-footer">
-      <h3>In collaboration with:</h3>
-      <div class="footer-container">
-        <a href="https://www.koda.dk/medlem/sog-stotte/koda-kultur">
-          <img src="img/koda_kultur_logo.png" alt="koda logo">
-        </a>
-        <a href="https://www.kunst.dk/">
-          <img src="img/statens.jpg" alt="statens institut for kunst logo">
-        </a>
-        <a href="https://www.tuborgfondet.dk/">
-          <img src="img/Tuborgfondet.jpg" alt="tuborgfondets logo">
-        </a>
-        <a href="https://www.aarhus.dk/">
-          <img src="img/aarhus_kommune.jpg" alt="aarhus kommune logo">
-        </a>
-      </div>
-    </article>
-    <article class="sub-footer background-color-black color-white">
-      <h3>Contact</h3>
-      <div class="footer-container">
-        <a href="mailto:contact@kontinuum.one">contact@kontinuum.one</a>
-        |
-        <a href="tel:+4526272829">+45 26 27 28 29</a>
-        |
-        <a href="https://data.virk.dk/">CVR.: 173494712</a>
-      </div>
-    </article>
-  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="javascript/fetch.js"></script>
